2001-05-11  Bill Gribble  <grib@billgribble.com>

	* src/scm/main-window.scm: force-output when saving param files.
	otherwise they don't get written until program exit, which can
	cause problems.  Add newlines to acct tree output. 

2001-05-11  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

2001-05-11  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/account-piecharts.scm: add checks for empty
	data.

2001-05-10  Dave Peticolas  <dave@krondo.com>

	* src/scm/main-window.scm ((gnc:main-window-book-open-handler
	book-url)): restore the main window even if we can't get a
	conf-file-name.

	* src/scm/main.scm (gnc:load-account-file): if we have a file to
	open, only run book-opened-hook if file open returns false.

	* src/FileDialog.c (gncPostFileOpen): once book-closed-hook has
	been run, run book-opened-hook if opening the file fails for some
	reason.

	* src/guile/gnc.gwp: update ui-open-file api.

	* src/gnome/top-level.c (gnucash_ui_open_file): return TRUE/FALSE
	for success/failure. use gboolean instead of int for boolean
	returns.

2001-05-10  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-column-view.c: change handling of component
	reports.  now we explicitly handle the case of the column view,
	which is the only report that needs to save/restore its children.

	* src/gnome/gnc-html-guppi.c: add printing support for graphs.
	Doesn't really work on my system ATM.  I'll follow up on it.

	* src/gnome/window-main.c: move save/restore forms out of gnome
	MDI config string.  rename some functions. 

	* src/gnome/window-report.c: save the initial report in a window
	for special treatment.  It's the one that gets saved and restored,
	and whose title appears in the tab.

	* src/scm/*: remove instances of report-add-child and friends.
	The concept is unnecessary.

	* src/scm/main-window.scm: save report and account data to a new
	file named after the book in the directory ~/.gnucash/books.
